# fastreact-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  radixconfig.yaml
.github/workflows/: checks.yaml  deploy.yaml
api/: Dockerfile  pyproject.toml
api/src/: config.py  init.sh  main.py
api/src/controllers/: healthcheck.py
api/src/tests/unittests/: dummy_test.py
api/src/utils/: logging.py
proxy/: Dockerfile  default.nginx
web/: Dockerfile  package.json  tsconfig.json
web/public/: index.html  manifest.json
web/src/: App.tsx
web/src/services/: forApi.ts
